--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot_cropped.jpg" alt="" /></a>
+					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
 					<h1><strong>Hi, I'm Ketki</strong>, a UC Berkeley senior<br />
 					studying integrative biology<br />
 					with a particular passion for wildlife conservation and photography.</h1>
