--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
-					<h1><strong>Hi, I'm Ketki</strong>, a UC Berkeley senior<br />
-					studying integrative biology<br />
-					with a particular passion for wildlife conservation and photography.</h1>
+					<h1><strong>Hi I'm Ketki</strong>, a senior at UC Berkeley<br />
+					studying integrative biology.<br />
+					</h1>
 				</div>
 			</header>
 
