--- a/index.html
+++ b/index.html
@@ -17,8 +17,7 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
-					<h1><strong>Hi I'm Ketki</strong>, a senior at UC Berkeley<br />
-					studying integrative biology.<br />
+					<h1><strong>Hi I'm Ketki</strong>, a senior at<br /> UC Berkeley studying<br /> integrative biology.<br />
 					</h1>
 				</div>
 			</header>
@@ -444,7 +443,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 						<li><a href="#" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 					</ul>
 					<ul class="copyright">
-						<li>&copy; Ketki Samel 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Ketki Samel 2020. Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
