add research section

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
+					<a class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
 					<h1><strong>Hi I'm Ketki</strong>, a senior at<br />
 						UC Berkeley studying<br />
 						integrative biology.<br />
@@ -34,9 +34,16 @@
 						</header>
 						<p>I'm a UC Berkeley senior studying integrative biology with a particular passion for birds, including behavior, evolution and conservation. I have field experience working on rodents in the Sierra Nevada, but I'm always looking for new opportunities to learn more about the natural world in a hands-on setting. I'd love to work in an environment where I can also put my skills in wildlife photography, writing and science education to good use!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Download resume</a></li>
 						</ul>
 					</section>
+				
+					<section id="research">
+						<h2>Research</h2>
+						<p>As an assistant to the UC Berkeley doctoral candidate Kwasi Wrensford, I study behavioral responses to environmental change in two chipmunk species, <i>Tamias alpinus</i> and <i>Tamias speciosus</i>. After receiving training on live-animal research from the UC Berkeley Office for Animal Care and Use, I handled live animals, collected tissue samples and measurements, and conducted behavioral trials during a monthlong trip to the eastern Sierra Nevada (Inyo and Mono Counties).<br /> After returning home, I analyzed videos of behavioral data using Behavioral Observation Research Interactive Software (BORIS).<br/> I am now manipulating and interpreting our data using R.</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Download something</a></li>
+						</ul>
 
 				<!-- Two -->
 					<section id="two">
