add navigation bar

--- a/index.html
+++ b/index.html
@@ -23,12 +23,20 @@
 					</h1>
 				</div>
 			</header>
+			
+			<nav id="nav">
+				<ul>
+					<li><a href="#intro" class="active">About me</a></li>
+					<li><a href="#research">Research</a></li>
+					<li><a href="#photos">Recent work</a></li>
+				</ul>
+			</nav>
 
 		<!-- Main -->
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
+					<section id="intro">
 						<header class="major">
 							<h2>About me</h2>
 						</header>
@@ -40,13 +48,13 @@
 				
 					<section id="research">
 						<h2>Research</h2>
-						<p>As an assistant to the UC Berkeley doctoral candidate Kwasi Wrensford, I study behavioral responses to environmental change in two chipmunk species, <i>Tamias alpinus</i> and <i>Tamias speciosus</i>. After receiving training on live-animal research from the UC Berkeley Office for Animal Care and Use, I handled live animals, collected tissue samples and measurements, and conducted behavioral trials during a monthlong trip to the eastern Sierra Nevada (Inyo and Mono Counties).<br /> After returning home, I analyzed videos of behavioral data using Behavioral Observation Research Interactive Software (BORIS).<br/> I am now manipulating and interpreting our data using R.</p>
+						<p>As an assistant to the UC Berkeley doctoral candidate Kwasi Wrensford, I study behavioral responses to environmental change in two chipmunk species, <i>Tamias alpinus</i> and <i>Tamias speciosus</i>. After receiving training on live-animal research from the UC Berkeley Office for Animal Care and Use, I handled live animals, collected tissue samples and measurements, and conducted behavioral trials during a monthlong trip to the eastern Sierra Nevada (Inyo and Mono Counties). After returning home, I analyzed videos of behavioral data using Behavioral Observation Research Interactive Software (BORIS). I am now manipulating and interpreting our data using R.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Download something</a></li>
 						</ul>
 
 				<!-- Two -->
-					<section id="two">
+					<section id="photos">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
