--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 			<div id="main">
 
 				<!-- One -->
-					<section id="intro" class="main special">
+					<section id="intro">
 						<header class="major">
 							<h2>About me</h2>
 						</header>
@@ -48,7 +48,7 @@
 					</section>
 				
 				<!-- 1.5 -->
-					<section id="research" class="main special">
+					<section id="research">
 						<h2>Research</h2>
 						<p>As an assistant to the UC Berkeley doctoral candidate Kwasi Wrensford, I study behavioral responses to environmental change in two chipmunk species, <i>Tamias alpinus</i> and <i>Tamias speciosus</i>. After receiving training on live-animal research from the UC Berkeley Office for Animal Care and Use, I handled live animals, collected tissue samples and measurements, and conducted behavioral trials during a monthlong trip to the eastern Sierra Nevada (Inyo and Mono Counties). After returning home, I analyzed videos of behavioral data using Behavioral Observation Research Interactive Software (BORIS). I am now manipulating and interpreting our data using R.</p>
 						<ul class="actions">
@@ -57,7 +57,7 @@
 					</section>
 
 				<!-- Two -->
-					<section id="photos" class="main special">
+					<section id="photos">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
