--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Strata by HTML5 UP</title>
+		<title>Ketki Samel</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -16,27 +16,36 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/avatar.jpg" alt="" /></a>
-					<h1><strong>I am Strata</strong>, a super simple<br />
-					responsive site template freebie<br />
-					crafted by <a href="http://html5up.net">HTML5 UP</a>.</h1>
+					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
+					<h1><strong>Hi I'm Ketki</strong>, a senior at<br />
+					UC Berkeley studying<br />
+					integrative biology.</h1>
 				</div>
 			</header>
+		
+		<!-- Nav -->	
+			<nav id="nav">
+				<ul>
+					<li><a href="#intro" class="active">About me</a></li>
+					<li><a href="#research">Research</a></li>
+					<li><a href="#photos">Recent work</a></li>
+				</ul>
+			</nav>
 
 		<!-- Main -->
 			<div id="main">
 
 				<!-- One -->
-					<section id="one">
+					<section id="intro">
 						<header class="major">
-							<h2>Ipsum lorem dolor aliquam ante commodo<br />
-							magna sed accumsan arcu neque.</h2>
+							<h2>About me</h2>
 						</header>
 						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
 						<ul class="actions">
 							<li><a href="#" class="button">Learn More</a></li>
 						</ul>
 					</section>
+		
 
 				<!-- Two -->
 					<section id="two">
