update research section

--- a/index.html
+++ b/index.html
@@ -40,15 +40,23 @@
 						<header class="major">
 							<h2>About me</h2>
 						</header>
-						<p>Accumsan orci faucibus id eu lorem semper. Eu ac iaculis ac nunc nisi lorem vulputate lorem neque cubilia ac in adipiscing in curae lobortis tortor primis integer massa adipiscing id nisi accumsan pellentesque commodo blandit enim arcu non at amet id arcu magna. Accumsan orci faucibus id eu lorem semper nunc nisi lorem vulputate lorem neque cubilia.</p>
+						<p>I'm a UC Berkeley senior studying integrative biology with a particular passion for birds, including behavior, evolution and conservation. I have field experience working on rodents in the Sierra Nevada, but I'm always looking for new opportunities to learn more about the natural world in a hands-on setting. I'd love to work in an environment where I can also put my skills in wildlife photography, writing and science education to good use!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Learn More</a></li>
+							<li><a href="#" class="button">Download resume</a></li>
 						</ul>
 					</section>
-		
-
+				
+				<!-- 1.5 -->
+					<section id="research">
+						<h2>Research</h2>
+						<p>As an assistant to the UC Berkeley doctoral candidate Kwasi Wrensford, I study behavioral responses to environmental change in two chipmunk species, <i>Tamias alpinus</i> and <i>Tamias speciosus</i>. After receiving training on live-animal research from the UC Berkeley Office for Animal Care and Use, I handled live animals, collected tissue samples and measurements, and conducted behavioral trials during a monthlong trip to the eastern Sierra Nevada (Inyo and Mono Counties). After returning home, I analyzed videos of behavioral data using Behavioral Observation Research Interactive Software (BORIS). I am now manipulating and interpreting our data using R.</p>
+						<ul class="actions">
+							<li><a href="#" class="button">Download something</a></li>
+						</ul>
+					</section>
+				
 				<!-- Two -->
-					<section id="two">
+					<section id="photos">
 						<h2>Recent Work</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
