--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 						</header>
 						<p>I'm a UC Berkeley senior studying integrative biology with a particular passion for birds, including behavior, evolution and conservation. I have field experience working on rodents in the Sierra Nevada, but I'm always looking for new opportunities to learn more about the natural world in a hands-on setting. I'd love to work in an environment where I can also put my skills in wildlife photography, writing and science education to good use!</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Download Resume</a></li>
+							<li><a href="#" class="button">Download resume</a></li>
 						</ul>
 					</section>
 				
