--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 						<h2>Research</h2>
 						<p>As an assistant to the UC Berkeley doctoral candidate Kwasi Wrensford, I study behavioral responses to environmental change in two chipmunk species, <i>Tamias alpinus</i> and <i>Tamias speciosus</i>. After receiving training on live-animal research from the UC Berkeley Office for Animal Care and Use, I handled live animals, collected tissue samples and measurements, and conducted behavioral trials during a monthlong trip to the eastern Sierra Nevada (Inyo and Mono Counties). After returning home, I analyzed videos of behavioral data using Behavioral Observation Research Interactive Software (BORIS). I am now manipulating and interpreting our data using R.</p>
 						<ul class="actions">
-							<li><a href="#" class="button">Download something</a></li>
+							<li><a href="#" class="button">Download Something</a></li>
 						</ul>
 					</section>
 				
