--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li><a href="#intro" class="active">About me</a></li>
 					<li><a href="#research">Research</a></li>
-					<li><a href="#photos">Recent work</a></li>
+					<li><a href="#photos">Photography</a></li>
 				</ul>
 			</nav>
 
@@ -57,11 +57,11 @@
 				
 				<!-- Two -->
 					<section id="photos">
-						<h2>Recent Work</h2>
+						<h2>Photography</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/IMG_8690.jpg" alt="" /></a>
-								<h3>Magna sed consequat tempus</h3>
+								<h3>Anna's Hummingbird</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
