--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 						<h2>Photography</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/thumbs/IMG_8690.jpg" alt="" /></a>
+								<a href="images/fulls/01.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_8690.jpg" alt="" /></a>
 								<h3>Anna's Hummingbird</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
