--- a/index.html
+++ b/index.html
@@ -65,47 +65,47 @@
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/thumbs/IMG_6652.jpg" alt="" /></a>
+								<a href="images/fulls/02.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_6652.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/03.jpg" class="image fit thumb"><img src="images/thumbs/IMG_5946.jpg" alt="" /></a>
+								<a href="images/fulls/03.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_5946.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/04.jpg" class="image fit thumb"><img src="images/thumbs/IMG_2036.jpg" alt="" /></a>
+								<a href="images/fulls/04.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_2036.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/05.jpg" class="image fit thumb"><img src="images/thumbs/IMG_1551.jpg" alt="" /></a>
+								<a href="images/fulls/05.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_1551.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/IMG_6472.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_6472.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/IMG_5696.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_5696.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/IMG_6923.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_6923.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/IMG_7465.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_7465.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/06.jpg" class="image fit thumb"><img src="images/thumbs/IMG_9409.jpg" alt="" /></a>
+								<a href="images/fulls/06.jpg" class="image fit thumb" style="cursor:pointer; outline: 0px;"><img src="images/thumbs/IMG_9409.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
