--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
 			<header id="header">
 				<div class="inner">
 					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
-					<h1><strong>Hi I'm Ketki</strong>, a senior at<br />
-					UC Berkeley studying<br />
-					integrative biology.</h1>
+					<h1><strong>Hi I'm Ketki</strong>, a senior at the<br />
+					University of California, Berkeley<br />
+					studying integrative biology.</h1>
 				</div>
 			</header>
 		
