--- a/index.html
+++ b/index.html
@@ -60,52 +60,52 @@
 						<h2>Photography</h2>
 						<div class="row">
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_8690.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_8690.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_8690.jpg" alt="" /></a>
 								<h3>Anna's Hummingbird</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_6652.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_6652.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_6652.jpg" alt="" /></a>
 								<h3>Ultricies lacinia interdum</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_5946.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_5946.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_5946.jpg" alt="" /></a>
 								<h3>Tortor metus commodo</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_2036.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_2036.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_2036.jpg" alt="" /></a>
 								<h3>Quam neque phasellus</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_1551.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_1551.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_1551.jpg" alt="" /></a>
 								<h3>Nunc enim commodo aliquet</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_6472.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_6472.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_6472.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_5696.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_5696.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_5696.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_6923.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_6923.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_6923.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_7465.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_7465.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_7465.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
-								<a href="images/fulls/IMG_9409.jpg" class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_9409.jpg" alt="" /></a>
+								<class="image fit thumb" style="cursor: pointer; outline: 0px;"><img src="images/thumbs/IMG_9409.jpg" alt="" /></a>
 								<h3>Risus ornare lacinia</h3>
 								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p>
 							</article>
