--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header">
 				<div class="inner">
-					<a href="#" class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
+					<a class="image avatar"><img src="images/headshot_square.jpg" alt="" /></a>
 					<h1><strong>Hi I'm Ketki</strong>, a senior at<br />
 					UC Berkeley studying<br />
 					integrative biology.</h1>
