--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
 				<!-- Header -->
 					<header id="header" class="alt">
 						<h1><a href="index.html">Ketki Samel</a></h1>
+						<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+						<a href="#" class="fa fa-twitter"></a>
+						<a href="#" class="fa fa-twitter"></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
