--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Ketki Samel</a></h1>
 						
-						<ul class="icons">
+						<ul class="contact">
 							<li><a href="https://www.linkedin.com/in/ketki-samel-269a8213a/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="https://twitter.com/ketkisamel" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/ketkigoesoutside/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
@@ -169,8 +169,8 @@
 								<li class="icon brands fa-twitter"><a href="#">twitter.com/untitled-tld</a></li>
 								<li class="icon brands fa-facebook-f"><a href="#">facebook.com/untitled-tld</a></li>
 								<li class="icon brands fa-instagram"><a href="#">instagram.com/untitled-tld</a></li>
-							-->
 							</ul>
+							-->
 							<ul class="copyright">
 								<li>&copy; Ketki Samel 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
