--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<header id="header" class="alt">
 						<h1><a href="index.html">Ketki Samel</a></h1>
 						
-						<ul class="contact">
+						<ul class="icons">
 							<li><a href="https://www.linkedin.com/in/ketki-samel-269a8213a/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 							<li><a href="https://twitter.com/ketkisamel" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="https://www.instagram.com/ketkigoesoutside/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
