removed gem icon

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<div class="logo"><span class="icon fa-gem"></span></div>
+							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
 							<h2>Ketki Samel</h2>
 							<p><b>UC Berkeley research assistant // wildlife photographer</b></p>
 							<ul class="icons">
