--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 						<!-- Three -->
 							<section id="three" class="wrapper spotlight style3">
 								<div class="inner">
-									<a href="#" class="image"><img src="images/pic03.jpg" alt="" /></a>
+									<a class="image"><img src="images/hummingbird_cropped.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Photography</h2>
 										<p>PHOTOGRAPHY TEXT GOES HERE</p>
