--- a/elements.html
+++ b/elements.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Elements - Solid State by HTML5 UP</title>
+		<title>Ketki Samel - Photography</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Solid State</a></h1>
+						<h1><a href="index.html">Ketki Samel - Photography</a></h1>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -31,10 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Generic</a></li>
-								<li><a href="elements.html">Elements</a></li>
-								<li><a href="#">Log In</a></li>
-								<li><a href="#">Sign Up</a></li>
+								<li><a href="generic.html">Research</a></li>
+								<li><a href="elements.html">Photography</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -44,15 +42,15 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Elements</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Photography Portfolio</h2>
+								<p>PHOTOGRAPHY TEXT GOES HERE</p>
 							</div>
 						</header>
 
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
-
+									<!--
 									<section>
 										<h3 class="major">Text</h3>
 										<p>This is <b>bold</b> and this is <strong>strong</strong>. This is <i>italic</i> and this is <em>emphasized</em>.
@@ -333,7 +331,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 											</div>
 										</form>
 									</section>
-
+									-->
 									<section>
 										<h3 class="major">Image</h3>
 										<h4>Fit</h4>
