--- a/photography.html
+++ b/photography.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Research</a></li>
-								<li><a href="elements.html">Photography</a></li>
+								<li><a href="research.html">Research</a></li>
+								<li><a href="photography.html">Photography</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
