--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="generic.html">Research</a></li>
-								<li><a href="elements.html">Photography</a></li>
+								<li><a href="research.html">Research</a></li>
+								<li><a href="photography.html">Photography</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
 						</div>
@@ -74,7 +74,7 @@
 									<div class="content">
 										<h2 class="major">Research</h2>
 										<p>RESEARCH TEXT GOES HERE</p>
-										<a href="generic.html" class="special">Learn more</a>
+										<a href="research.html" class="special">Learn more</a>
 									</div>
 								</div>
 							</section>
@@ -86,7 +86,7 @@
 									<div class="content">
 										<h2 class="major">Photography</h2>
 										<p>PHOTOGRAPHY TEXT GOES HERE</p>
-										<a href="elements.html" class="special">Visit portfolio</a>
+										<a href="photography.html" class="special">Visit portfolio</a>
 									</div>
 								</div>
 							</section>
