--- a/photography.html
+++ b/photography.html
@@ -338,7 +338,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<!-- <div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div> -->
-												<div class="col-4"><span href="images/IMG_8690.jpg" class="image fit"><img src="images/IMG_8690.jpg" alt="" /></span></div>
+												<div class="col-4"><span class="image fit"><img src="images/IMG_8690.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/pic06.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/pic07.jpg" alt="" /></span></div>
