--- a/research.html
+++ b/research.html
@@ -42,14 +42,19 @@
 					<section id="wrapper">
 						<header>
 							<div class="inner">
-								<h2>Generic</h2>
-								<p>Phasellus non pulvinar erat. Fusce tincidunt nisl eget ipsum.</p>
+								<h2>Research</h2>
+								<p>RESEARCH TEXT GOES HERE</p>
 							</div>
 						</header>
 
 						<!-- Content -->
 							<div class="wrapper">
 								<div class="inner">
+									<section>
+										<h4>Left &amp; Right</h4>
+										<p><span class="image left"><img src="images/pic01.jpg" alt="" /></span>RESEARCH TEXT HERE</p>
+										<p><span class="image right"><img src="images/pic02.jpg" alt="" /></span>RESEARCH TEXT HERE</p>
+									</section>
 
 									<h3 class="major">Lorem ipsum dolor</h3>
 									<p>Morbi mattis mi consectetur tortor elementum, varius pellentesque velit convallis. Aenean tincidunt lectus auctor mauris maximus, ac scelerisque ipsum tempor. Duis vulputate ex et ex tincidunt, quis lacinia velit aliquet. Duis non efficitur nisi, id malesuada justo. Maecenas sagittis felis ac sagittis semper. Curabitur purus leo donec vel dolor at arcu tincidunt bibendum. Interdum et malesuada fames ac ante ipsum primis in faucibus. Fusce ut aliquet justo. Donec id neque ipsum. Integer eget ultricies odio. Nam vel ex a orci fringilla tincidunt. Aliquam eleifend ligula non velit accumsan cursus. Etiam ut gravida sapien.</p>
