--- a/photography.html
+++ b/photography.html
@@ -408,7 +408,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 							</ul>
 							-->
 							<ul class="copyright">
-								<li>&copy; Untitled Inc. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>&copy; Ketki Samel 2020.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 							</ul>
 						</div>
 					</section>
