--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
 									<div class="content">
 										<h2 class="major">Introduction</h2>
 										<p>INTRODUCTION TEXT GOES HERE</p>
+										<a href="#" class="special">Download CV</a>
 									</div>
 								</div>
 							</section>
