--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 								<div class="inner">
 									<a class="image"><img src="images/headshot_square.jpg" alt="" /></a>
 									<div class="content">
-										<h2 class="major">Introduction</h2>
+										<h2 class="major">About me</h2>
 										<p>INTRODUCTION TEXT GOES HERE</p>
 										<a href="#" class="special">Download CV</a>
 									</div>
