--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 						<div class="inner">
 							<!-- <div class="logo"><span class="icon fa-gem"></span></div> -->
 							<h2>Ketki Samel</h2>
-							<p><b>Wildlife ecologist // nature photographer</b></p>
+							<p><b>PhD student // ecologist // photographer</b></p>
 							<ul class="icons">
 								<li><a href="https://www.linkedin.com/in/ketki-samel-269a8213a/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 								<li><a href="https://twitter.com/ketkisamel" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -62,7 +62,7 @@
 									<a class="image"><img src="images/headshot_square.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
-										<p>INTRODUCTION TEXT GOES HERE</p>
+										<p>My name is Ketki Samel, and I'm a PhD student at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change (like right now!).</p>
 										<a href="#" class="special">Download CV</a>
 									</div>
 								</div>
