--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a class="image"><img src="images/headshot_square.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
-										<p>My name is Ketki Samel, and I'm a PhD student at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change (like right now!).</p>
+										<p>My name is Ketki Samel, and I'm a PhD student at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change.</p>
 										<a href="#" class="special">Download CV</a>
 									</div>
 								</div>
@@ -86,7 +86,8 @@
 									<a class="image"><img src="images/hummingbird_cropped.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Photography</h2>
-										<p>When I'm not on campus, I love to take my camera and explore natural places. Check back soon for my portfolio of wildlife photography!</p>
+										<p>When I'm not on campus, I love to take my camera and explore natural places.</p>
+										<p>Check back soon for my portfolio of wildlife photography!</p>
 										<a href="photography.html" class="special">Visit portfolio</a>
 									</div>
 								</div>
