--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 						<!-- One -->
 							<section id="one" class="wrapper spotlight style1">
 								<div class="inner">
-									<a class="image"><img src="images/headshot_square.jpg" alt="" /></a>
+									<a class="image"><img src="images/IMG_8625.heic" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
 										<p>My name is Ketki Samel, and I'm a PhD student at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change.</p>
