--- a/photography.html
+++ b/photography.html
@@ -43,7 +43,7 @@
 						<header>
 							<div class="inner">
 								<h2>Photography Portfolio</h2>
-								<p>PHOTOGRAPHY TEXT GOES HERE</p>
+								<!--p>PHOTOGRAPHY TEXT GOES HERE</p-->
 							</div>
 						</header>
 
@@ -334,7 +334,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									-->
 									<section>
 										<h3 class="major">Wildlife</h3>
-										<h4>Put something here???</h4>
+										<h4>Anna's hummingbird (Calypte anna); Shorebirds at Point Reyes National Seashore; American pika (Ochotona princeps); Greater flamingo (Phoenicopterus roseus); Common yellowthroat (Geothlypis trichas)</h4>
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<!-- <div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div> -->
@@ -347,14 +347,14 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</div>
 										
 										<h3 class="major">Landscapes</h3>
-										<h4>Put something here???</h4>
+										<h4>Arrowhead Lake, CA; Iceland</h4>
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<!-- <div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div> -->
 												<div class="col-4"><span class="image fit"><img src="images/IMG_7465.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/IMG_6652.jpg" alt="" /></span></div>
 												<div class="col-4"><span class="image fit"><img src="images/IMG_6923.jpg" alt="" /></span></div>
-												<div class="col-4"><span class="image fit"><img src="images/IMG_6472.jpg" alt="" /></span></div>
+												<!--div class="col-4"><span class="image fit"><img src="images/IMG_6472.jpg" alt="" /></span></div-->
 											</div>
 										</div>
 										<!--
