--- a/research.html
+++ b/research.html
@@ -43,7 +43,7 @@
 						<header>
 							<div class="inner">
 								<h2>Research</h2>
-								<p>RESEARCH TEXT GOES HERE</p>
+								<!--p>RESEARCH TEXT GOES HERE</p-->
 							</div>
 						</header>
 
