--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<h2>Menu</h2>
 							<ul class="links">
 								<li><a href="index.html">Home</a></li>
-								<li><a href="research.html">Research</a></li>
+								<!--li><a href="research.html">Research</a></li-->
 								<li><a href="photography.html">Photography</a></li>
 							</ul>
 							<a href="#" class="close">Close</a>
@@ -75,7 +75,7 @@
 									<div class="content">
 										<h2 class="major">Research</h2>
 										<p>Before I came to UConn, I spent my undergraduate years at UC Berkeley studying integrative biology. For two years, I conducted fieldwork and data analysis with PhD candidate Kwasi Wrensford, studying behavioral adaptations to climate change among chipmunks of the Sierra Nevada. In 2020, as the number of people on UC Berkeley's campus dropped dramatically due to COVID-19, I also carried out an independent project looking into changes in community composition among campus birds.</p>
-										<a href="research.html" class="special">Learn more</a>
+										<!--a href="research.html" class="special">Learn more</a-->
 									</div>
 								</div>
 							</section>
@@ -86,8 +86,7 @@
 									<a class="image"><img src="images/hummingbird_cropped.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">Photography</h2>
-										<p>When I'm not on campus, I love to take my camera and explore natural places.</p>
-										<p>Check back soon for my portfolio of wildlife photography!</p>
+										<p>When I'm not on campus, I love to take my camera outdoors and explore natural places!</p>
 										<a href="photography.html" class="special">Visit portfolio</a>
 									</div>
 								</div>
