--- a/photography.html
+++ b/photography.html
@@ -334,7 +334,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 									-->
 									<section>
 										<h3 class="major">Wildlife</h3>
-										<h4>Anna's hummingbird (Calypte anna); Shorebirds at Point Reyes National Seashore; American pika (Ochotona princeps); Greater flamingo (Phoenicopterus roseus); Common yellowthroat (Geothlypis trichas)</h4>
+										<!--h4>Anna's hummingbird (Calypte anna); Shorebirds at Point Reyes National Seashore; American pika (Ochotona princeps); Greater flamingo (Phoenicopterus roseus); Common yellowthroat (Geothlypis trichas)</h4-->
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<!-- <div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div> -->
@@ -347,7 +347,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 										</div>
 										
 										<h3 class="major">Landscapes</h3>
-										<h4>Arrowhead Lake, CA; Iceland</h4>
+										<!--h4>Arrowhead Lake, CA; Iceland</h4-->
 										<div class="box alt">
 											<div class="row gtr-uniform">
 												<!-- <div class="col-12"><span class="image fit"><img src="images/pic08.jpg" alt="" /></span></div> -->
