--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
 									<div class="content">
 										<h2 class="major">About me</h2>
 										<p>My name is Ketki Samel, and I'm a PhD student at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change.</p>
-										<a href="#" class="special">Download CV</a>
+										<a href="CV_current.pdf" class="special">Download CV</a>
 									</div>
 								</div>
 							</section>
