--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 								<li><a href="https://www.linkedin.com/in/ketki-samel-269a8213a/" class="icon brands fa-linkedin"><span class="label">Twitter</span></a></li>
 								<li><a href="https://twitter.com/ketkisamel" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 								<li><a href="https://www.instagram.com/ketkigoesoutside/?hl=en" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="mailto:ketkisamel@berkeley.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
+								<li><a href="mailto:ketki.samel@uconn.edu" class="icon solid fa-envelope"><span class="label">Email</span></a></li>
 							</ul>
 						</div>
 					</section>
