--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 									<a class="image"><img src="images/headshot1.jpg" alt="" /></a>
 									<div class="content">
 										<h2 class="major">About me</h2>
-										<p>My name is Ketki Samel, and I'm a PhD student at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change.</p>
+										<p>My name is Ketki Samel, and I'm a PhD student in the <a href="https://eeb.uconn.edu/">Ecology and Evolutionary Biology department</a> at the University of Connecticut. As a member of Chris Elphick's lab at UConn, I plan to focus on ornithology, ecology, and conservation. In particular, I'm interested in understanding how birds interact with each other and with humans, especially during periods of global change.</p>
 										<a href="CV_current.pdf" class="special">Download CV</a>
 									</div>
 								</div>
